[package]
name = "gskits"
version = "0.10.1-dev"
edition = "2021"
description = "common kits"
license = "MIT"
repository ="https://github.com/keithyin/gskits"

exclude = [
    "test_data/*",
]

[dependencies]
rust-htslib = "0.47.0"
anyhow = "1.0.93"
indicatif="0.17.7"
num_cpus="1.16"
tracing = "0.1.40"
uuid = { version = "1.0", features = ["v5"] }
chrono = "0.4"
bio="2.0.3"

lazy_static = "1.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "transpose_benchmark"
harness = false